# prank-call-analysis-api

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/api/: dependencies.py
app/api/routes/: analyze.py  health.py
app/core/: config.py
app/models/: call.py
app/service/: analysis.py  azure_speech.py
app/utils/: agent.py
